tests/bad_reserved_name_import_alias.stderr
tests/bad_reserved_name_import_alias.hop:2:37: error: HOP2008: identifier prefix '__hop_' is reserved
tests/bad_reserved_name_import_alias.hop:2:37: hint: HOP2008: rename symbol to avoid '__hop_' prefix
