tests/bad_reserved_name_import_alias.hop
// Verifies bad reserved name import alias.
import "hophop/feature/optional" as __hop_bad
